[package]
name = "minecraft-modpack-downloader"
version = "0.0.1"
authors = ["DanSnow <dododavid006@gmail.com>"]
edition = "2018"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
clap = { version = "4.4.17", features = ["derive"] }
color-eyre = "0.6.2"
futures-lite = "1.13.0"
indicatif = "0.17.7"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tap = "1.0.1"
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
