[package]
name = "minecraft-modpack-downloader"
version = "0.0.1"
authors = ["DanSnow <dododavid006@gmail.com>"]
edition = "2018"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
futures-lite = "2.4.0"
indicatif = "0.17.8"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tap = "1.0.1"
tokio = { version = "1.41.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
